--- a/app/src/main/res/layout/diemdanh.xml
+++ b/app/src/main/res/layout/diemdanh.xml
@@ -37,6 +37,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="73dp"
                         android:gravity="bottom|right"
+                        android:paddingRight="10dp"
                         android:text="ĐIỂM DANH"
                         android:textColor="#000000"
                         android:textSize="34sp" />
@@ -110,37 +111,16 @@
                             android:layout_width="108dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Chọn khoa"
+                            android:text="Chọn lớp"
                             android:textColor="#000000"
                             android:textSize="20sp" />
 
                         <Spinner
-                            android:id="@+id/class_spinner"
-                            android:layout_width="30dp"
-                            android:layout_height="20dp"
-                            android:layout_marginTop="10dp"
-                            android:gravity="bottom|center"
-                            android:hint="Chọn khoa" />
-
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="150dp"
+                            android:id="@+id/spinner_lop"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="30dp"
-                            app:cardBackgroundColor="#FFFFFF"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="7dp"
-                            app:cardPreventCornerOverlap="true">
+                            android:layout_weight="1" />
 
-                            <TextView
-                                android:id="@+id/textView7"
-                                android:layout_width="100dp"
-                                android:layout_height="35dp"
-                                android:layout_marginLeft="20dp"
-                                android:layout_weight="1"
-                                android:text="TextView" />
-                        </androidx.cardview.widget.CardView>
 
                     </LinearLayout>
 
@@ -155,36 +135,18 @@
                             android:layout_width="109dp"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Chọn lớp"
+                            android:text="Chọn môn"
                             android:textColor="#000000"
                             android:textSize="20sp" />
 
                         <Spinner
-                            android:id="@+id/class_spinner2"
-                            android:layout_width="30dp"
+                            android:id="@+id/spiner_mon"
+                            android:layout_width="match_parent"
                             android:layout_height="20dp"
                             android:layout_marginTop="10dp"
                             android:gravity="bottom|center" />
                         <!--                        android:prompt="Chọn lớp" />-->
 
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="150dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="30dp"
-                            app:cardBackgroundColor="#FFFFFF"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="7dp"
-                            app:cardPreventCornerOverlap="true">
-
-                            <TextView
-                                android:id="@+id/textView8"
-                                android:layout_width="100dp"
-                                android:layout_height="35dp"
-                                android:layout_marginLeft="20dp"
-                                android:layout_weight="1"
-                                android:text="TextView" />
-                        </androidx.cardview.widget.CardView>
                     </LinearLayout>
 
 
