--- a/app/src/main/res/layout/item_nganh.xml
+++ b/app/src/main/res/layout/item_nganh.xml
@@ -8,26 +8,17 @@
     android:padding="8dp">
 
     <TextView
-        android:id="@+id/textView12"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/icon5"
-        android:textSize="36sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="12dp"
-        android:padding="4dp" />
-
-    <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="4dp"
         android:text="Thống kê"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/textView12"
-        app:layout_constraintTop_toTopOf="@+id/textView12"
-        android:layout_marginStart="12dp"
-        android:padding="4dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
