--- a/app/src/main/res/layout/item_khoa.xml
+++ b/app/src/main/res/layout/item_khoa.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:id="@+id/tenkhoa"
                 android:layout_width="288dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Tài chính - kế toán"
                 android:textSize="20sp"
@@ -42,7 +42,7 @@
         <ListView
             android:id="@+id/list_nganh"
             android:layout_width="match_parent"
-            android:layout_height="194dp" />
+            android:layout_height="351dp" />
 
     </LinearLayout>
 
